--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "swr": "^2.1.0",
-    "typescript": "5.0.2",
+    "typescript": "^4.8.4",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
